--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "tera-internals",
   "version": "1.0.0",
   "description": "",
-  "main": "test.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "install": "node-gyp rebuild"
+    "start": "node app.js",
+    "main": "node-gyp rebuild && copy .\\build\\Release\\terainternals.node .\\bin\\terainternals.node",
+    "guard": "node-gyp rebuild --arch=ia32 && copy .\\build\\Release\\teraguard.dll .\\bin\\teraguard32.dll",
+    "install": "npm run main && npm run guard"
   },
   "repository": {
     "type": "git",
