- reorganized code, added headers - added simple socket (TODO: make it accept multiple clients and keep listening)

--- a/package.json
+++ b/package.json
@@ -19,5 +19,6 @@
   "bugs": {
     "url": "https://github.com/undefjs/tera-internals/issues"
   },
-  "homepage": "https://github.com/undefjs/tera-internals#readme"
+  "homepage": "https://github.com/undefjs/tera-internals#readme",
+  "dependencies": {}
 }
